Fix header aligning with content alignment.
(fix #178)

--- a/sources/components/custom-styles/template-cs-style-rules.scss
+++ b/sources/components/custom-styles/template-cs-style-rules.scss
@@ -632,7 +632,6 @@ body {
   font-size: var(--content-body-font-size);
   line-height: var(--content-body-line-height);
   color: var(--primary-color);
-  text-align: var(--content-body-alignment);
 
   .dark-background & {
     color: var(--third-color);
@@ -661,6 +660,10 @@ body {
       text-decoration: var(--header-body-text-decoration);
       text-transform: var(--header-body-text-transform);
     }
+  }
+  
+  .header-bottom &, .page-body & {
+    text-align: var(--content-body-alignment);
   }
 
   // Styling rules for the editable content area headings and paragraphs.
